--- a/Malometer/Base.lproj/Main.storyboard
+++ b/Malometer/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="aGh-bq-c5E" kind="modal" identifier="EditAgent" id="jw4-X3-4af"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -184,4 +187,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="jw4-X3-4af"/>
+    </inferredMetricsTieBreakers>
 </document>
