--- a/Malometer/Base.lproj/Main.storyboard
+++ b/Malometer/Base.lproj/Main.storyboard
@@ -145,6 +145,18 @@
                                     <action selector="editImage:" destination="Ah7-4n-0Wa" eventType="touchUpInside" id="XIZ-3Z-966"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tV8-wz-Es9">
+                                <rect key="frame" x="186" y="76" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dtj-t7-DYC">
+                                <rect key="frame" x="186" y="123" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -162,8 +174,10 @@
                     </navigationItem>
                     <connections>
                         <outlet property="assessmentLabel" destination="bc5-ZC-kYs" id="4DP-AX-Skw"/>
+                        <outlet property="categoryTextField" destination="tV8-wz-Es9" id="hgC-jY-H7R"/>
                         <outlet property="destroyPowerLabel" destination="6dJ-LA-LTU" id="eQ9-xA-eYb"/>
                         <outlet property="destroyPowerStepper" destination="6VR-tv-S0E" id="wgT-gk-CbW"/>
+                        <outlet property="domainTextField" destination="Dtj-t7-DYC" id="JOf-pD-wyo"/>
                         <outlet property="imageButton" destination="xhh-VQ-ON8" id="HoD-rW-yFT"/>
                         <outlet property="motivationLabel" destination="uFX-hW-817" id="8q7-Jt-Kwg"/>
                         <outlet property="motivationStepper" destination="CgA-eX-PUQ" id="wpL-oQ-ME7"/>
